--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,10 @@
 <resources>
     <string name="app_name">Dagens Lunch</string>
     <string name="ok">OK</string>
-    <string name="aboutText">LunchToday är utvecklad av Niklas Lanzén.</string>
-    <string name="aboutText2">Se http://blogg.lanzen.se/tag/lunchtoday för nyheter</string>
+    <string name="aboutText">Dagens Lunch är utvecklad av\nNiklas Lanzén.</string>
+    <string name="aboutText2">Se följande websida för nyheter:</string>
     <string name="version">0.1.1</string>
     <string name="defaultArea">http://www.lanzen.se/LunchToday/MjardeviArea.properties</string>
+    <string name="button_back">Tillbaka</string>
+    <string name="aboutText3">http://blogg.lanzen.se/tag/dagens-lunch/</string>
 </resources>
