--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="aboutText">Dagens Lunch är utvecklad av\nNiklas Lanzén.</string>
     <string name="aboutText2">Se följande websida för nyheter:</string>
     <string name="version">0.1.2</string>
-    <string name="defaultArea">http://www.lanzen.se/LunchToday/MjardeviArea.properties</string>
+    <string name="defaultArea">http://www.lanzen.se/LunchToday/MjardeviArea.json</string>
     <string name="button_back">Tillbaka</string>
     <string name="aboutText3">http://blogg.lanzen.se/tag/dagens-lunch/</string>
+    <string name="latestVersionURL">http://www.lanzen.se/LunchToday/latestVersion.json</string>
+    <string name="latestVersion">LatestVersion</string>
 </resources>
