--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="aboutText3">http://blogg.lanzen.se/tag/dagens-lunch/</string>
     <string name="latestVersionURL">http://www.lanzen.se/LunchToday/latestVersion.json</string>
     <string name="latestVersion">LatestVersion</string>
+    <string name="pref_resturant_names">PREF_RESTURANT_NAMES</string>
 </resources>
