--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="latestVersionURL">http://www.lanzen.se/LunchToday/latestVersion.json</string>
     <string name="latestVersion">LatestVersion</string>
     <string name="pref_resturant_names">PREF_RESTURANT_NAMES</string>
+    <string name="pref_current_area_name">PREF_CURRENT_AREA_NAME</string>
 </resources>
