--- a/LunchTodayApp/res/values/strings.xml
+++ b/LunchTodayApp/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="ok">OK</string>
     <string name="aboutText">Dagens Lunch är utvecklad av\nNiklas Lanzén.</string>
     <string name="aboutText2">Se följande websida för nyheter:</string>
-    <string name="version">1.0.1</string>
+    <string name="iconText1">Stort tack till Maps Icons Collection:</string>
+    <string name="iconText2">http://mapicons.nicolasmollet.com</string>
+    <string name="version">1.2</string>
     <string name="defaultArea">http://www.lanzen.se/LunchToday/MjardeviArea.json</string>
     <string name="button_back">Tillbaka</string>
     <string name="aboutText3">http://blogg.lanzen.se/tag/dagens-lunch/</string>
@@ -12,4 +14,10 @@
     <string name="latestVersion">LatestVersion</string>
     <string name="pref_resturant_names">PREF_RESTURANT_NAMES</string>
     <string name="pref_current_area_name">PREF_CURRENT_AREA_NAME</string>
+    <string name="map_resturant_name">MAP_RESTURANT_NAME</string>   
+    <string name="map_polygon">MAP_POLYGON</string>   
+    <string name="menu_show_me">Visa mig på kartan</string>   
+    <string name="menu_hide_me">Göm mig</string>   
+    <!-- Finger print 2F:FB:30:6F:8D:8E:D1:FC:F3:A4:C4:BD:94:8C:5E:21 -->
+    <string name="mapAPIdebug">0cF1pMlB95MUr6IW-6bUAiCg1HZTElqddLHm25A</string>
 </resources>
